--- a/main.html
+++ b/main.html
@@ -35,6 +35,16 @@
   const options = document.querySelectorAll('[type="range"], [name="text"]');
   const speakButton = document.querySelector('#speak');
   const stopButton = document.querySelector('#stop');
+	speakButton.addEventListener('click', () => {
+		msg.text = options[2].value;
+		msg.rate = options[0].value;
+		msg.pitch = options[1].value;
+		speechSynthesis.speak(msg);
+  })
+
+  stopButton.addEventListener('click', () => {
+	speechSynthesis.cancel();
+  })
 
   //Your code goes here
 </script>
